@@ -29,6 +29,8 @@ $inputData->departament_id = 0;
 $inputData->validate_start_chat = true;
 $inputData->name_items = array();
 $inputData->value_items = array();
+$inputData->value_types = array();
+$inputData->value_sizes = array();
 
 $chat = new erLhcoreClassModelChat();
 
@@ -98,6 +100,16 @@ $definition = array(
 				ezcInputFormDefinitionElement::OPTIONAL, 'unsafe_raw',
 				null,
 				FILTER_REQUIRE_ARRAY
+		),
+		'type' => new ezcInputFormDefinitionElement(
+				ezcInputFormDefinitionElement::OPTIONAL, 'string',
+				null,
+				FILTER_REQUIRE_ARRAY
+		),
+		'size' => new ezcInputFormDefinitionElement(
+				ezcInputFormDefinitionElement::OPTIONAL, 'string',
+				null,
+				FILTER_REQUIRE_ARRAY
 		)
 );
 
@@ -111,6 +123,16 @@ if ( $form->hasValidData( 'name' ) && !empty($form->name))
 if ( $form->hasValidData( 'value' ) && !empty($form->value))
 {
 	$inputData->value_items = $form->value;
+}
+
+if ( $form->hasValidData( 'type' ) && !empty($form->type))
+{
+	$inputData->value_types = $form->type;
+}
+
+if ( $form->hasValidData( 'size' ) && !empty($form->size))
+{
+	$inputData->value_sizes = $form->size;
 }
 
 $tpl->set('input_data',$inputData);
